@@ -245,6 +245,8 @@ secure_log_date_format = %b %e
 	</units>
 	<map>
 	</map>
+	<alerts>
+	</alerts>
 	graphs_per_row = 2
 	rigid = 0
 	limit = 100
